--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
-    "prd": "pm2 start bin/www",
+    "start": "node bin/githuoServer",
+    "dev": "./node_modules/.bin/nodemon bin/githuoServer",
+    "prd": "pm2 start bin/githuoServer",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "debug": "^2.6.3",
+    "jsonwebtoken": "^8.5.0",
     "koa": "^2.2.0",
     "koa-body": "^4.1.0",
     "koa-bodyparser": "^3.2.0",
+    "koa-compress": "^3.0.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.5.1",
     "koa-logger": "^2.0.1",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
