--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "koa-views": "^5.2.1",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.18",
-    "pug": "^2.0.0-rc.1"
+    "pug": "^2.0.0-rc.1",
+    "request": "^2.88.0",
+    "string-random": "^0.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
